k8s/opengist/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengist
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opengist
  template:
    metadata:
      labels:
        app: opengist
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: opengist
          image: ghcr.io/thomiceli/opengist:latest@sha256:7edc91273ee7d10a17406da8a08c803158baaff984c39b789c1313473d068f21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6157
            - containerPort: 2222
          volumeMounts:
            - name: opengist-volume
              mountPath: /opengist
      volumes:
        - name: opengist-volume
          persistentVolumeClaim:
            claimName: opengist-pvc
