k8s/opengist/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengist
spec:
  selector:
    app: opengist
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6157
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: 2222
  type: ClusterIP
