k8s/opengist/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengist
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-https-redirect@kubernetescrd'
spec:
  ingressClassName: traefik
  rules:
    - host: opengist.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengist
                port:
                  name: http
  tls:
    - hosts:
        - opengist.tryrocket.cloud
      secretName: opengist-tryrocket-cloud-production-tls
